Removed/converted special characters

--- a/3.HL7 Messaging Infrastructure/2.HL7 definitions.html
+++ b/3.HL7 Messaging Infrastructure/2.HL7 definitions.html
@@ -126,7 +126,7 @@
 	<strong>
   Null and empty fields:
  </strong>
- The null value is transmitted as two double quote marks (“”). A null-valued field differs from an empty field. An empty field should not overwrite previously entered data in the field, while the null value means that any previous value in this field should be overwritten.
+ The null value is transmitted as two double quote marks (""). A null-valued field differs from an empty field. An empty field should not overwrite previously entered data in the field, while the null value means that any previous value in this field should be overwritten.
 </p>
 <p>
 	<br/>
@@ -148,10 +148,10 @@
 		<tr>
 			<td class="fr-thick" style="width: 13.3198%;">
 				<p>
-     “”
+     ""
     </p>
 				<p>
-     |””|
+     |""|
     </p>
 				<br/>
 			</td>
@@ -184,7 +184,7 @@
 	<tbody>
 		<tr>
 			<td style="width: 100.0000%;">
-    Null fields (“”) should not be sent in immunization messages. Systems which will send null fields (“”) must specify their use in local implementation guides. Systems which will accept and process null fields, as described above, must specify their use in local implementation guides.
+    Null fields ("") should not be sent in immunization messages. Systems which will send null fields ("") must specify their use in local implementation guides. Systems which will accept and process null fields, as described above, must specify their use in local implementation guides.
     <br/>
 			</td>
 		</tr>
