I updated BHS-2 definition

--- a/5.Batch File Specifications/2.BHS - Batch Header Segment.html
+++ b/5.Batch File Specifications/2.BHS - Batch Header Segment.html
@@ -439,8 +439,7 @@
  </strong>
 </p>
 <p>
- Definition: This field contains the four characters in the following order: the component separator, repetition separator, escape characters, and subcomponent separator. The required values are ^~\&amp; (ASCII 94, 126, 92, and 38,
-    respectively).
+ Definition: This field comprises four specific characters in sequence: component separator (^, ASCII 94), repetition separator (~, ASCII 126), escape character (\, ASCII 92), and subcomponent separator (&, ASCII 38). These characters are encoded as ^, ~, \\, and &amp; respectively.
 </p>
 <p>
 	<br/>
